--- a/UPPHercegovina.WebApplication/UPPHercegovina.WebApplication.csproj
+++ b/UPPHercegovina.WebApplication/UPPHercegovina.WebApplication.csproj
@@ -492,6 +492,7 @@
     <Content Include="Views\PersonProducts\Details.cshtml" />
     <Content Include="Views\PersonProducts\Edit.cshtml" />
     <Content Include="Views\PersonProducts\Index.cshtml" />
+    <Content Include="Views\Posts\hazatest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
