--- a/UPPHercegovina.WebApplication/Web.config
+++ b/UPPHercegovina.WebApplication/Web.config
@@ -10,6 +10,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-UPPHercegovina.WebApplication-20160214074756.mdf;Initial Catalog=aspnet-UPPHercegovina.WebApplication-20160214074756;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=.;database=aspnet-UPPHercegovina.WebApplication-20160214074756;integrated security=true;" providerName="System.Data.SqlClient" />-->
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
