--- a/UPPHercegovina.WebApplication/packages.config
+++ b/UPPHercegovina.WebApplication/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="CKeditor.Mvc" version="3.6.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
@@ -29,6 +29,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
@@ -36,5 +37,5 @@
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net45" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
